# knowject

./: .dockerignore  .env.docker.local.example  .env.docker.production.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  antd.md  compose.local.yml  compose.production.yml  compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.agent/: PLANS.md  README.md
.claude/: settings.json
apps/indexer-py/: AGENTS.md  README.md  package.json  pipeline.py  pyproject.toml  runtime_env.py  server.py
apps/indexer-py/app/: __init__.py  app_factory.py  main.py
apps/indexer-py/app/api/: __init__.py
apps/indexer-py/app/api/routes/: __init__.py  health.py  indexing.py
apps/indexer-py/app/core/: __init__.py  config.py  runtime_env.py
apps/indexer-py/app/domain/: __init__.py
apps/indexer-py/app/domain/indexing/: __init__.py  chroma_client.py  chunking.py  diagnostics.py  embedding_client.py  parser.py  pipeline.py  runtime_config.py  segments.py
apps/indexer-py/app/domain/indexing/parsers/: __init__.py  docx_parser.py  pdf_parser.py  text_parser.py  xlsx_parser.py
apps/indexer-py/app/schemas/: __init__.py  indexing.py
apps/indexer-py/app/services/: __init__.py  indexing_service.py
apps/indexer-py/scripts/: run-with-uv.sh
apps/indexer-py/tests/: conftest.py  indexer_capture_server.py  test_api.py  test_chroma_client.py  test_chunking.py  test_diagnostics.py  test_embedding_client.py  test_parser.py  test_pipeline.py  test_runtime_config.py  test_runtime_env.py
(+607 files in other folders)
