[project]
name = "knowject-indexer-py"
version = "0.1.0"
description = "Internal FastAPI indexer control plane for Knowject"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.121.0,<1.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "pypdf>=6.1.3,<7.0.0",
  "python-docx>=1.2.0,<2.0.0",
  "uvicorn>=0.38.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
